--- a/ExerciseCSS1.html
+++ b/ExerciseCSS1.html
@@ -3,7 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>Euli de Asis Information</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <style>
+        body {
+            background-color: #f0f8ff;
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+            color: #000;
+        }
+
+        .main-title {
+            text-align: center;
+            color: #FF0000;
+            font-family: "Times New Roman", serif;
+        }
+
+        .section-title {
+            font-family: "Times New Roman", serif;
+            margin-top: 20px;
+            margin-bottom: 5px;
+        }
+
+        .info-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+
+        .info-table td {
+            padding: 6px 10px;
+            vertical-align: top;
+        }
+
+        .info-table td:first-child {
+            font-weight: bold;
+            width: 200px;
+        }
+
+        hr {
+            margin: 5px 0 15px 0;
+            border: none;
+            border-top: 1px solid #444;
+        }
+    </style>
 </head>
 <body>
     <h1 class="main-title">EULI JANDRINE DE ASIS</h1>
@@ -12,20 +55,20 @@
     <h4 class="section-title">PERSONAL INFORMATION:</h4>
     <hr>
     <table class="info-table">
-        <tr><td><b>Age:</b></td><td>19</td></tr>
-        <tr><td><b>Gender:</b></td><td>Female</td></tr>
-        <tr><td><b>Date of Birth:</b></td><td>November 4, 2005</td></tr>
-        <tr><td><b>Place of Birth:</b></td><td>Baguio City</td></tr>
-        <tr><td><b>Contact No.:</b></td><td>09566279842</td></tr>
-        <tr><td><b>Baguio Address:</b></td><td>100C. M. Roxas St., Lower Brookside</td></tr>
+        <tr><td>Age:</td><td>19</td></tr>
+        <tr><td>Gender:</td><td>Female</td></tr>
+        <tr><td>Date of Birth:</td><td>November 4, 2005</td></tr>
+        <tr><td>Place of Birth:</td><td>Baguio City</td></tr>
+        <tr><td>Contact No.:</td><td>09566279842</td></tr>
+        <tr><td>Baguio Address:</td><td>100C. M. Roxas St., Lower Brookside</td></tr>
     </table>
 
     <h4 class="section-title">EDUCATION:</h4>
     <hr>
     <table class="info-table">
-        <tr><td>August 2025 – present</td><td><b>College:</b> Bachelor of Science in Information Technology<br>University of Baguio, Baguio City</td></tr>
+        <tr><td>August 2025 - present</td><td><b>College:</b> Bachelor of Science in Information Technology<br>University of Baguio, Baguio City</td></tr>
         <tr><td>August 2019</td><td><b>High School:</b> Science High School<br>University of Baguio, Baguio City</td></tr>
-        <tr><td>August 2023</td><td><b>High School:</b> Preparatory High School<br>University of Baguio, Baguio City</td></tr>
+        <tr><td>August 2023</td><td>Preparatory High School<br>University of Baguio, Baguio City</td></tr>
         <tr><td>August 2010</td><td><b>Elementary:</b> Laboratory Elementary School<br>University of Baguio, Baguio City</td></tr>
     </table>
 
@@ -33,10 +76,10 @@
     <hr>
     <table class="info-table">
         <tr><td>Loyalty Awardee</td><td>15 YEARS University of Baguio</td></tr>
-        <tr><td>Best Cheerleader</td><td>Intramurals – UBLES (2018)</td></tr>
+        <tr><td>Best Cheerleader</td><td>Intramurals - UBLES (2018)</td></tr>
         <tr><td>With Honors</td><td>Preparatory Senior High School UB (2024)</td></tr>
-        <tr><td>Second Runner-Up</td><td>Intramurals (Badminton) – Science High School UB (2020)</td></tr>
-        <tr><td>First Runner-Up</td><td>Great Minds Meet (Rubik’s Cube Relay) – Science High School UB (2020)</td></tr>
+        <tr><td>Second Runner-Up</td><td>Intramurals (Badminton) - Science High School UB (2020)</td></tr>
+        <tr><td>First Runner-Up</td><td>Great Minds Meet (Rubik's Cube Relay) - Science High School UB (2020)</td></tr>
     </table>
 
     <h4 class="section-title">SKILLS AND TALENTS:</h4>
